# diesel_sqlite_example

./: .gitignore  .travis.yml  Cargo.toml  README.md
migrations/20161228165926_create_posts/: up.sql
migrations/20170101055148_create_post/: up.sql
src/: lib.rs  models.rs
