[package]
name = "diesel_sqlite_sample"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
build = "build.rs"

[build-dependencies]
diesel_codegen_syntex = { version = "0.9.0", features = ["sqlite"], optional = true }

[dependencies]
diesel = "0.9.0"
diesel_codegen = { version = "0.9.0", features = ["sqlite"], optional = true }
dotenv = "0.8.0"

[features]
default = ["nightly"]
with-syntex = ["diesel_codegen_syntex"]
nightly = ["diesel/unstable", "diesel_codegen"]
